backends/wayland: fall back to qpainter when there's no render node

While we could still access the primary node, as we're not getting GPU acceleration
anyways we might as well fall back to CPU rendering directly

BUG: 466302